be/src/exec/hbase-scan-node.cc
@@ -127,8 +127,8 @@ Status HBaseScanNode::Open(RuntimeState* state) {
 void HBaseScanNode::WriteTextSlot(
     const string& family, const string& qualifier,
     void* value, int value_length, SlotDescriptor* slot,
-    RuntimeState* state, MemPool* pool, bool* error_in_row) {
-  if (!text_converter_->WriteSlot(slot, tuple_,
+    RuntimeState* state, MemPool* pool, Tuple* tuple, bool* error_in_row) {
+  if (!text_converter_->WriteSlot(slot, tuple,
       reinterpret_cast<char*>(value), value_length, true, false, pool)) {
     *error_in_row = true;
     if (state->LogHasSpace()) {
@@ -159,8 +159,12 @@ Status HBaseScanNode::GetNext(RuntimeState* state, RowBatch* row_batch, bool* eo
   *eos = false;
 
   // Create new tuple buffer for row_batch.
-  tuple_buffer_size_ = row_batch->MaxTupleBufferSize();
-  tuple_ = Tuple::Create(tuple_buffer_size_, row_batch->tuple_data_pool());
+  int64_t tuple_buffer_size;
+  uint8_t* tuple_buffer;
+  RETURN_IF_ERROR(
+      row_batch->ResizeAndAllocateTupleBuffer(state, &tuple_buffer_size, &tuple_buffer));
+  Tuple* tuple = reinterpret_cast<Tuple*>(tuple_buffer);
+  tuple->Init(tuple_buffer_size);
 
   // Indicates whether the current row has conversion errors. Used for error reporting.
   bool error_in_row = false;
@@ -190,7 +194,7 @@ Status HBaseScanNode::GetNext(RuntimeState* state, RowBatch* row_batch, bool* eo
 
     int row_idx = row_batch->AddRow();
     TupleRow* row = row_batch->GetRow(row_idx);
-    row->SetTuple(tuple_idx_, tuple_);
+    row->SetTuple(tuple_idx_, tuple);
 
     {
       // Measure row key and column value materialization time
@@ -199,13 +203,13 @@ Status HBaseScanNode::GetNext(RuntimeState* state, RowBatch* row_batch, bool* eo
       // Write row key slot.
       if (row_key_slot_ != NULL) {
         if (row_key_binary_encoded_) {
-          RETURN_IF_ERROR(hbase_scanner_->GetRowKey(env, row_key_slot_, tuple_));
+          RETURN_IF_ERROR(hbase_scanner_->GetRowKey(env, row_key_slot_, tuple));
         } else {
           void* key;
           int key_length;
           RETURN_IF_ERROR(hbase_scanner_->GetRowKey(env, &key, &key_length));
           WriteTextSlot("key", "", key, key_length, row_key_slot_, state,
-              row_batch->tuple_data_pool(), &error_in_row);
+              row_batch->tuple_data_pool(), tuple, &error_in_row);
         }
       }
 
@@ -213,18 +217,18 @@ Status HBaseScanNode::GetNext(RuntimeState* state, RowBatch* row_batch, bool* eo
       for (int i = 0; i < sorted_non_key_slots_.size(); ++i) {
         if (sorted_cols_[i]->binary_encoded) {
           RETURN_IF_ERROR(hbase_scanner_->GetValue(env, sorted_cols_[i]->family,
-              sorted_cols_[i]->qualifier, sorted_non_key_slots_[i], tuple_));
+              sorted_cols_[i]->qualifier, sorted_non_key_slots_[i], tuple));
         } else {
           void* value;
           int value_length;
           RETURN_IF_ERROR(hbase_scanner_->GetValue(env, sorted_cols_[i]->family,
               sorted_cols_[i]->qualifier, &value, &value_length));
           if (value == NULL) {
-            tuple_->SetNull(sorted_non_key_slots_[i]->null_indicator_offset());
+            tuple->SetNull(sorted_non_key_slots_[i]->null_indicator_offset());
           } else {
             WriteTextSlot(sorted_cols_[i]->family, sorted_cols_[i]->qualifier,
                 value, value_length, sorted_non_key_slots_[i], state,
-                row_batch->tuple_data_pool(), &error_in_row);
+                row_batch->tuple_data_pool(), tuple, &error_in_row);
           }
         }
       }
@@ -253,13 +257,12 @@ Status HBaseScanNode::GetNext(RuntimeState* state, RowBatch* row_batch, bool* eo
       row_batch->CommitLastRow();
       ++num_rows_returned_;
       COUNTER_SET(rows_returned_counter_, num_rows_returned_);
-      char* new_tuple = reinterpret_cast<char*>(tuple_);
-      new_tuple += tuple_desc_->byte_size();
-      tuple_ = reinterpret_cast<Tuple*>(new_tuple);
+      tuple = reinterpret_cast<Tuple*>(
+          reinterpret_cast<uint8_t*>(tuple) + tuple_desc_->byte_size());
     } else {
       // make sure to reset null indicators since we're overwriting
       // the tuple assembled for the previous row
-      tuple_->Init(tuple_desc_->byte_size());
+      tuple->Init(tuple_desc_->byte_size());
     }
     COUNTER_ADD(rows_read_counter_, 1);
   }
